--- a/style.css
+++ b/style.css
@@ -1,57 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --cor-primaria: #000000;
+    --cor-secundaria: #fdfdfd;
+    --cor-terciaria: #22D4FD;
+    --cor-hover: #272727;
+}
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     box-sizing: border-box;
-    background-color: black;
-    color: aliceblue;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
-.Titulo-destaque{
-    color: aqua;
+.cabecalho{
+    padding: 2% 0 0 15%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu_links{
+    font-family: 'Monstserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--cor-terciaria);
+    text-decoration: none;
+}
+
+.titulo-destaque{
+    color: var(--cor-terciaria);
 }
 
 .apresentacao{
-    margin: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
+    display: flex;
     flex-direction: column;
     gap: 40px;
-
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: 'Krona One', sans-serif;
 }
 
-.apresentacao__conteudo__paragrafo{
-    font-size: 24px;
+.apresentacao__conteudo__texto{
+    font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 
-.links{
+.apresentacao__links{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
 }
 
-.botao{
-    background-color: #22D4FD;
-    width: 280px;
+.apresentacao__links__subtitulo{
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 1.5rem;
+}
+
+.apresentacao__links__link{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    width: 50%;
     text-align: center;
-    border-radius: 16px;
-    font-size: 24px;
+    border-radius: 8px;
+    font-size: 1.5rem;
+    font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: black;
+    color: var(--cor-secundaria);
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    border: 2px solid var(--cor-terciaria);
+}
+
+.apresentacao__links__link:hover{
+    background-color: var(--cor-hover);
+}
+
+.rodape{
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
+    padding: 24px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.imagem{
+    width: 50%;
+}
+
+@media(max-width: 1200px){
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 3%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
+
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
 }
